Correct z-indexes

--- a/cloudeditor/core/plugins/LiveHtml5Pagination/LiveHtml5Pagination.css
+++ b/cloudeditor/core/plugins/LiveHtml5Pagination/LiveHtml5Pagination.css
@@ -281,10 +281,6 @@
   cursor: pointer;
 }
 
-.pageSelectorContainer {
-  z-index: 1000;
-}
-
 .pageHeaderButtonsContainer {
   text-align: center;
 }
