--- a/cloudeditor/themes/stadion/theme.scss
+++ b/cloudeditor/themes/stadion/theme.scss
@@ -51,7 +51,7 @@ body {
 }
 
 #sidebar-wrapper {
-  z-index: 1001;
+  z-index: 1000;
   position: fixed;
   left: 250px;
   width: 0;
